--- a/battleShip/build.xml
+++ b/battleShip/build.xml
@@ -25,7 +25,7 @@
     <target name="jarfile" description="Archives the code" depends="compile">
         <jar destfile="${build.dir}/${project.name}.jar" basedir="${classes.dir}">
             <manifest>
-                <attribute name="Main-Class" value="${main.class}" />
+                <attribute name="Images-Class" value="${main.class}" />
             </manifest>
         </jar>
     </target>
